# db-cli

./: .gitignore  README.md  pyproject.toml
db_cli/: __main__.py  cli.py  converter.py
samples/: Shoebox202610010.xml  Shoebox202610012.xml  Shoebox261.xml
tests/: test_cli.py
